samples/_failures_safe/1761695587_6448cc_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_487eaeee.c: In function ‘parse_assignment’:
./samples/SAFE/__tmp_487eaeee.c:167:81: error: expected ‘)’ at end of input
  167 |     if (current_token >= token_count || strcmp(tokens[current_token].value, "=")
      |        ~                                                                        ^
      |                                                                                 )
./samples/SAFE/__tmp_487eaeee.c:167:5: error: expected declaration or statement at end of input
  167 |     if (current_token >= token_count || strcmp(tokens[current_token].value, "=")
      |     ^~
